css 셀렉터 사용법 실습

--- a/html/layout-hw.html
+++ b/html/layout-hw.html
@@ -7,6 +7,17 @@
     <link href="css/layout-hw.css" rel="stylesheet">
 </head>
 <body>
+    <!-- css 셀렉터 사용하기 -->
+    <!-- div == nav -->
+    <nav>
+        <ul class="navbar">
+            <li><a href="#">영화</a></li>
+            <li><a href="#">맛집</a></li>
+            <li><a href="#">IT</a></li>
+            <li><a href="#">컴퓨터</a></li>
+        </ul>
+    </nav>
+
     <div class="left">
         <div class="left-top">
             <div class="box" style="background: #BDBDBD;">
@@ -19,7 +30,7 @@
         </div>
         <div class="left-bottom">
             <div class="title">
-                <p>갤럭시 버즈 본체만 새로 구입했어요</p>
+                <h3>갤럭시 버즈 본체만 새로 구입했어요</h3>
             </div>
             <div class="main-text">
                 <p>
