feat: input 태그를 이용한 입력 박스

--- a/html/layout1.html
+++ b/html/layout1.html
@@ -13,5 +13,27 @@
         <p class="main-content" style="margin-top: 0px;">저희 제품으로 인싸가 되어보세요!</p>
         <button class="main-button">구매하기</button>
     </div>
+
+    <form>
+        <!-- value: 기본 작성 문자, placeholder: 추천 문자 -->
+        <input type="text" value="asdfasdf">
+        <input type="text" placeholder="asdfasdf">
+        <!-- name은 안에 적힌 속성으로 서버로 전달 -->
+        <input type="text" name="age">
+        <input type="text" name="age">
+        <input type="password">
+        <input type="checkbox">
+        <input type="radio">
+        <select>
+            <option>asdfsaf</option>
+            <option>awefqw</option>
+        </select>
+        <!-- 원하는 사이즈 박스 -->
+        <textarea rows="1"></textarea>
+        <button type="submit">전송</button>
+    </form>
+    <form>
+        <input type="text" class="text-input">
+    </form>
 </body>
 </html>
