pseudo class 사용법

--- a/html/cart-hw.html
+++ b/html/cart-hw.html
@@ -72,7 +72,12 @@
         <div>
             <p style="margin: 30px;"></p>
             <input type="submit" class="submit" value="Choose payment method">
+            <p></p>
+            <!-- pseudo class 사용법 -->
+            <button class="bnt">구매하기</button>
+            <input class="input-test">
         </div>
+        <a href="#" class="custom-link">링크</a>
     </div>
 </body>
 </html>
